--- a/Templates/company_website.html
+++ b/Templates/company_website.html
@@ -303,21 +303,21 @@
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="./Photos/paris.jpeg" alt="Paris" width="415" height="300">
+        <img src="../Photos/paris.jpeg" alt="Paris" width="415" height="300">
         <p><strong>Paris</strong></p>
         <p>Yes, we built Paris</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="./Photos/newYork.jpeg" alt="New York" width="400" height="300">
+        <img src="../Photos/newYork.jpeg" alt="New York" width="400" height="300">
         <p><strong>New York</strong></p>
         <p>We built New York</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="./Photos/franciso.jpeg" alt="San Francisco" width="500" height="500">
+        <img src="../Photos/franciso.jpeg" alt="San Francisco" width="500" height="500">
         <p><strong>San Francisco</strong></p>
         <p>Yes, San Fran is ours</p>
       </div>
@@ -455,7 +455,7 @@
 </div>
 
 <!-- Image of location/map -->
-<img src="./Photos/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
+<img src="../Photos/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
 <footer class="container-fluid text-center">
   <a href="#myPage" title="To Top">
