--- a/Templates/business_template.htm
+++ b/Templates/business_template.htm
@@ -227,7 +227,8 @@
             <div class="container">
                 <div class="section-title">
                     <h2>Services</h2>
-                    <p style="color: #343a40;">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
+                    <p style="color: #343a40;">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
+                        aliquid fuga eum quidem. Sit
                         sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
                         ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
                 </div>
@@ -260,6 +261,20 @@
                             <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section id="cta" class="cta">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-9 ">
+                        <h3>Call To Action</h3>
+                        <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                            mollit anim id est laborum.</p>
+                    </div>
+                    <div class="col-lg-3 cta-btn-container "> <a class="cta-btn " href="#">Call
+                            To Action</a></div>
                 </div>
             </div>
         </section>
