--- a/Templates/business_template.html
+++ b/Templates/business_template.html
@@ -29,7 +29,7 @@
     <header style="background-color: #37517E;">
         <div class="container">
             <div>
-                <nav class="navbar navbar-expand-lg ">
+                <nav class="navbar navbar-expand-lg">
                     <div class="collapse navbar-collapse">
                         <a class="navbar-brand" href="#">
                             <h1><b>Umair</b></h1>
@@ -275,6 +275,189 @@
                     </div>
                     <div class="col-lg-3 cta-btn-container "> <a class="cta-btn " href="#">Call
                             To Action</a></div>
+                </div>
+            </div>
+        </section>
+        <section id="portfolio" class="portfolio" style="background-color: white;">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Portfolio</h2>
+                    <p style="color: #343a40;">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
+                        aliquid fuga eum quidem. Sit
+                        sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
+                        ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                </div>
+                <ul id="portfolio-flters" class="d-flex justify-content-center">
+                    <li data-filter="*" class="filter-active">All</li>
+                    <li data-filter=".filter-app" class="btn-default">App</li>
+                    <li data-filter=".filter-card" class="btn-default">Card</li>
+                    <li data-filter=".filter-web" class="btn-default">Web</li>
+                </ul>
+                <div class="row portfolio-container" style="position: relative; height: 1097.33px;">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-app"
+                        style="position: absolute; left: 0px; top: 0px;">
+                        <div class="portfolio-img"><img src="../Photos/portfolio-1.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-info">
+                            <h4>App 1</h4>
+                            <p>App</p> <a href="../Photos/portfolio-1.jpg" data-gallery="portfolioGallery"
+                                class="portfolio-lightbox preview-link" title="App 1"><i
+                                    class="fa-solid fa-plus"></i></a> <a href="portfolio-details.html"
+                                class="details-link" title="More Details"><i class="fa-solid fa-link"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-web"
+                        style="position: absolute; left: 380px; top: 0px;">
+                        <div class="portfolio-img"><img src="../Photos/portfolio-2.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-info">
+                            <h4>Web 3</h4>
+                            <p>Web</p> <a href="../Photos/portfolio-2.jpg" data-gallery="portfolioGallery"
+                                class="portfolio-lightbox preview-link" title="Web 3"><i
+                                    class="fa-solid fa-plus"></i></a> <a href="portfolio-details.html"
+                                class="details-link" title="More Details"><i class="fa-solid fa-link"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-app"
+                        style="position: absolute; left: 760px; top: 0px;">
+                        <div class="portfolio-img"><img src="../Photos/portfolio-3.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-info">
+                            <h4>App 2</h4>
+                            <p>App</p> <a href="../Photos/portfolio-3.jpg" data-gallery="portfolioGallery"
+                                class="portfolio-lightbox preview-link" title="App 2"><i
+                                    class="fa-solid fa-plus"></i></a> <a href="portfolio-details.html"
+                                class="details-link" title="More Details"><i class="fa fa-link"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-card"
+                        style="position: absolute; left: 760px; top: 230.25px;">
+                        <div class="portfolio-img"><img src="../Photos/portfolio-4.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-info">
+                            <h4>Card 2</h4>
+                            <p>Card</p> <a href="../Photos/portfolio-4.jpg" data-gallery="portfolioGallery"
+                                class="portfolio-lightbox preview-link" title="Card 2"><i class="fa fa-plus"></i></a> <a
+                                href="portfolio-details.html" class="details-link" title="More Details"><i
+                                    class="fa fa-link"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-web"
+                        style="position: absolute; left: 380px; top: 268.688px;">
+                        <div class="portfolio-img"><img src="../Photos/portfolio-5.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-info">
+                            <h4>Web 2</h4>
+                            <p>Web</p> <a href="../Photos/portfolio-5.jpg" data-gallery="portfolioGallery"
+                                class="portfolio-lightbox preview-link" title="Web 2"><i
+                                    class="fa-solid fa-plus"></i></a> <a href="portfolio-details.html"
+                                class="details-link" title="More Details"><i class="fa-solid fa-link"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-app"
+                        style="position: absolute; left: 0px; top: 390.891px;">
+                        <div class="portfolio-img"><img src="../Photos/portfolio-6.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-info">
+                            <h4>App 3</h4>
+                            <p>App</p> <a href="../Photos/portfolio-6.jpg" data-gallery="portfolioGallery"
+                                class="portfolio-lightbox preview-link" title="App 3"><i
+                                    class="fa-solid fa-plus"></i></a> <a href="portfolio-details.html"
+                                class="details-link" title="More Details"><i class="fa-solid fa-link"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-card"
+                        style="position: absolute; left: 760px; top: 495.641px;">
+                        <div class="portfolio-img"><img src="../Photos/portfolio-7.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-info">
+                            <h4>Card 1</h4>
+                            <p>Card</p> <a href="../Photos/portfolio-7.jpg" data-gallery="portfolioGallery"
+                                class="portfolio-lightbox preview-link" title="Card 1"><i
+                                    class="fa-solid fa-plus"></i></a> <a href="portfolio-details.html"
+                                class="details-link" title="More Details"><i class="fa-solid fa-link"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-card"
+                        style="position: absolute; left: 760px; top: 756.719px;">
+                        <div class="portfolio-img"><img src="../Photos/portfolio-8.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-info">
+                            <h4>Card 3</h4>
+                            <p>Card</p> <a href="../Photos/portfolio-8.jpg" data-gallery="portfolioGallery"
+                                class="portfolio-lightbox preview-link" title="Card 3"><i
+                                    class="fa-solid fa-plus"></i></a> <a href="portfolio-details.html"
+                                class="details-link" title="More Details"><i class="fa-solid fa-link"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-web"
+                        style="position: absolute; left: 380px; top: 830.844px;">
+                        <div class="portfolio-img"><img src="../Photos/portfolio-9.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-info">
+                            <h4>Web 3</h4>
+                            <p>Web</p> <a href="../Photos/portfolio-9.jpg" data-gallery="portfolioGallery"
+                                class="portfolio-lightbox preview-link" title="Web 3"><i
+                                    class="fa-solid fa-plus"></i></a> <a href="portfolio-details.html"
+                                class="details-link" title="More Details"><i class="fa-solid fa-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="team" class="team section-bg" style="background-color: #f3f5fa;">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Team</h2>
+                    <p style="color: #343a40;">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
+                        aliquid fuga eum quidem. Sit
+                        sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
+                        ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="member d-flex align-items-start">
+                            <div class="pic"><img src="../Photos/hero-img.png" class="img-fluid" alt=""></div>
+                            <div class="member-info">
+                                <h4>Walter White</h4> <span>Chief Executive Officer</span>
+                                <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
+                                <div class="social"> <a href=""><i class="fa-brands fa-twitter"></i></a> <a href=""><i
+                                            class="fa-brands fa-facebook-f"></i></a> <a href=""><i
+                                            class="fa-brands fa-instagram"></i></a> <a href=""> <i
+                                            class="fa-brands fa-linkedin"></i> </a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 mt-4 mt-lg-0 aos-init aos-animate" data-aos="zoom-in" data-aos-delay="200">
+                        <div class="member d-flex align-items-start">
+                            <div class="pic"><img src="../Photos/hero-img.png" class="img-fluid" alt=""></div>
+                            <div class="member-info">
+                                <h4>Sarah Jhonson</h4> <span>Product Manager</span>
+                                <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
+                                <div class="social"> <a href=""><i class="fa-brands fa-twitter"></i></a> <a href=""><i
+                                            class="fa-brands fa-facebook-f"></i></a> <a href=""><i
+                                            class="fa-brands fa-instagram"></i></a> <a href=""> <i
+                                            class="fa-brands fa-linkedin"></i> </a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 mt-4 aos-init aos-animate" data-aos="zoom-in" data-aos-delay="300">
+                        <div class="member d-flex align-items-start">
+                            <div class="pic"><img src="../Photos/hero-img.png" class="img-fluid" alt=""></div>
+                            <div class="member-info">
+                                <h4>William Anderson</h4> <span>CTO</span>
+                                <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
+                                <div class="social"> <a href=""><i class="fa-brands fa-twitter"></i></a> <a href=""><i
+                                            class="fa-brands fa-facebook-f"></i></a> <a href=""><i
+                                            class="fa-brands fa-instagram"></i></a> <a href=""> <i
+                                            class="fa-brands fa-linkedin"></i> </a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 mt-4 aos-init aos-animate" data-aos="zoom-in" data-aos-delay="400">
+                        <div class="member d-flex align-items-start">
+                            <div class="pic"><img src="../Photos/hero-img.png" class="img-fluid" alt=""></div>
+                            <div class="member-info">
+                                <h4>Amanda Jepson</h4> <span>Accountant</span>
+                                <p>Dolorum tempora officiis odit laborum officiis et et accusamus</p>
+                                <div class="social"> <a href=""><i class="fa-brands fa-twitter"></i></a> <a href=""><i
+                                            class="fa-brands fa-facebook-f"></i></a> <a href=""><i
+                                            class="fa-brands fa-instagram"></i></a> <a href=""> <i
+                                            class="fa-brands fa-linkedin"></i> </a></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
