--- a/Templates/business_template.html
+++ b/Templates/business_template.html
@@ -461,6 +461,58 @@
                 </div>
             </div>
         </section>
+        <section id="pricing" class="pricing">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Pricing</h2>
+                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
+                        sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
+                        ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 ">
+                        <div class="box">
+                            <h3>Free Plan</h3>
+                            <h4><sup>$</sup>0<span>per month</span></h4>
+                            <ul>
+                                <li><i class="fa-solid fa-check"></i> Quam adipiscing vitae proin</li>
+                                <li><i class="fa-solid fa-check"></i> Nec feugiat nisl pretium</li>
+                                <li><i class="fa-solid fa-check"></i> Nulla at volutpat diam uteera</li>
+                                <li class="na"><i class="fa-solid fa-x"></i> <span>Pharetra massa massa ultricies</span></li>
+                                <li class="na"><i class="fa-solid fa-x"></i> <span>Massa ultricies mi quis hendrerit</span>
+                                </li>
+                            </ul> <a href="#" class="buy-btn">Get Started</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mt-4 mt-lg-0">
+                        <div class="box featured">
+                            <h3>Business Plan</h3>
+                            <h4><sup>$</sup>29<span>per month</span></h4>
+                            <ul>
+                                <li><i class="fa-solid fa-check"></i> Quam adipiscing vitae proin</li>
+                                <li><i class="fa-solid fa-check"></i> Nec feugiat nisl pretium</li>
+                                <li><i class="fa-solid fa-check"></i> Nulla at volutpat diam uteera</li>
+                                <li><i class="fa-solid fa-check"></i> Pharetra massa massa ultricies</li>
+                                <li><i class="fa-solid fa-check"></i> Massa ultricies mi quis hendrerit</li>
+                            </ul> <a href="#" class="buy-btn">Get Started</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mt-4 mt-lg-0">
+                        <div class="box">
+                            <h3>Developer Plan</h3>
+                            <h4><sup>$</sup>49<span>per month</span></h4>
+                            <ul>
+                                <li><i class="fa-solid fa-check"></i> Quam adipiscing vitae proin</li>
+                                <li><i class="fa-solid fa-check"></i> Nec feugiat nisl pretium</li>
+                                <li><i class="fa-solid fa-check"></i> Nulla at volutpat diam uteera</li>
+                                <li><i class="fa-solid fa-check"></i> Pharetra massa massa ultricies</li>
+                                <li><i class="fa-solid fa-check"></i> Massa ultricies mi quis hendrerit</li>
+                            </ul> <a href="#" class="buy-btn">Get Started</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
